k8s/cd/common/envoy-gateway-policy/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway
  ingress:
    - fromEntities:
        - all
      toPorts:
        - ports:
            - port: "10080"
              protocol: TCP
            - port: "10443"
              protocol: TCP
            - port: "10443"
              protocol: UDP
